# crypto-pet

backend/: pyproject.toml
backend/src/: http_client.py  main.py
