[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Crypto Pet Project"
authors = ["popovtt <piligrimqwert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
pydantic-settings = "^2.5.2"
aiohttp = "^3.10.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
